tests/baselines/reference/sourceMapValidationDestructuringForOfArrayBindingPattern(target=es2015).errors.txt
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(21,23): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(24,23): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(27,23): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(30,50): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(33,50): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(36,50): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(40,23): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(43,23): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(46,23): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(49,21): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(52,21): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(55,21): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(59,41): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(62,41): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(65,41): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(68,56): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(71,56): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(74,56): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(78,39): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(81,39): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(84,39): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(87,34): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(90,34): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern.ts(93,34): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForOfArrayBindingPattern.ts (24 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, [string, string]];
    
    let robotA: Robot = [1, "mower", "mowing"];
    let robotB: Robot = [2, "trimmer", "trimming"];
    let robots = [robotA, robotB];
    function getRobots() {
        return robots;
    }
    
    let multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    let multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    let multiRobots = [multiRobotA, multiRobotB];
    function getMultiRobots() {
        return multiRobots;
    }
    
    for (let [, nameA] of robots) {
                          ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, nameA] of getRobots()) {
                          ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, nameA] of [robotA, robotB]) {
                          ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for (let [, [primarySkillA, secondarySkillA]] of multiRobots) {
                                                     ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for (let [, [primarySkillA, secondarySkillA]] of getMultiRobots()) {
                                                     ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for (let [, [primarySkillA, secondarySkillA]] of [multiRobotA, multiRobotB]) {
                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    
    for (let [numberB] of robots) {
                          ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [numberB] of getRobots()) {
                          ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [numberB] of [robotA, robotB]) {
                          ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for (let [nameB] of multiRobots) {
                        ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for (let [nameB] of getMultiRobots()) {
                        ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for (let [nameB] of [multiRobotA, multiRobotB]) {
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    
    for (let [numberA2, nameA2, skillA2] of robots) {
                                            ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [numberA2, nameA2, skillA2] of getRobots()) {
                                            ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [numberA2, nameA2, skillA2] of [robotA, robotB]) {
                                            ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for (let [nameMA, [primarySkillA, secondarySkillA]] of multiRobots) {
                                                           ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for (let [nameMA, [primarySkillA, secondarySkillA]] of getMultiRobots()) {
                                                           ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for (let [nameMA, [primarySkillA, secondarySkillA]] of [multiRobotA, multiRobotB]) {
                                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    for (let [numberA3, ...robotAInfo] of robots) {
                                          ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [numberA3, ...robotAInfo] of getRobots()) {
                                          ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [numberA3, ...robotAInfo] of [robotA, robotB]) {
                                          ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for (let [...multiRobotAInfo] of multiRobots) {
                                     ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }
    for (let [...multiRobotAInfo] of getMultiRobots()) {
                                     ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }
    for (let [...multiRobotAInfo] of [multiRobotA, multiRobotB]) {
                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }